--- a/gui/index.html
+++ b/gui/index.html
@@ -3,10 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="./styles.css" rel="stylesheet">
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <title>Five Chungus</title>
   </head>
   <body>
@@ -14,10 +12,13 @@
       <div class="jumbatron">
         <h1>Five Chungus</h1>
 
-        FiveChungus is a peer-to-peer .png file sharing/distribution application that lets users to share their files via localhost.
+        FiveChungus is a peer-to-peer file sharing/distribution application that lets users to share their files via localhost.
 
+        <br>
         Announce files from "files" folder to share them.
+        <br>
         Announced files from other devices will be seen with their IPs.
+        <br>
         If a file is found in a available device, download it by writing their name.
       </div>
 
